--- a/tubes/css/font.css
+++ b/tubes/css/font.css
@@ -6,7 +6,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: local('Caveat Regular'), local('Caveat-Regular'), url(https://fonts.gstatic.com/s/caveat/v7/Wnz6HAc5bAfYB2Q7azYYmg8.woff2) format('woff2');
+  src: local('Caveat Regular'), local('Caveat-Regular'), url(../assets/font/Caveat/Wnz6HAc5bAfYB2Q7azYYmg8.woff2) format('woff2');
   unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
 }
 /* cyrillic */
@@ -15,7 +15,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: local('Caveat Regular'), local('Caveat-Regular'), url(https://fonts.gstatic.com/s/caveat/v7/Wnz6HAc5bAfYB2Q7YjYYmg8.woff2) format('woff2');
+  src: local('Caveat Regular'), local('Caveat-Regular'), url(../assets/font/Caveat/Wnz6HAc5bAfYB2Q7YjYYmg8.woff2) format('woff2');
   unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
 /* latin-ext */
@@ -24,7 +24,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: local('Caveat Regular'), local('Caveat-Regular'), url(https://fonts.gstatic.com/s/caveat/v7/Wnz6HAc5bAfYB2Q7aDYYmg8.woff2) format('woff2');
+  src: local('Caveat Regular'), local('Caveat-Regular'), url(../assets/font/Caveat/Wnz6HAc5bAfYB2Q7aDYYmg8.woff2) format('woff2');
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
