--- a/tubes/css/style.css
+++ b/tubes/css/style.css
@@ -13,6 +13,7 @@
   1.3 Width & Height
   1.4 Color
   1.5 Display (inline, block, inline-block, none)
+  1.6 Border
 
   Info Penamaan :
   ---------------------------------
@@ -159,6 +160,20 @@
   align-items: center;
 }
 
+/* 1.6 Border */
+.border-top-0 {
+  border-top: none !important; 
+}
+.border-bottom-0 {
+  border-bottom: none !important; 
+}
+.border-left-0 {
+  border-left: none !important; 
+}
+.border-right-0 {
+  border-right: none !important; 
+}
+
 /*
   CUSTOM MATERIALIZE
   2.1 Header
@@ -267,6 +282,7 @@ textarea.materialize-textarea {
   position: relative;
   height: 36px;
   margin: 15px 0;
+  border: 1px solid #333;
 }
 .input-search i.prefix {
   position: absolute;
@@ -307,6 +323,14 @@ body {
   object-fit: cover;
   object-position: center center;
 }
+.card-action a {
+  color: #26a69a !important;
+  font-weight: 500;
+}
+
+a.white-text {
+  color: #fff !important;
+}
 
 /* 2.11 Login */
 .form-login {
@@ -325,11 +349,36 @@ body {
 }
 
 /* 2.13 Font */
-#font-caveat {
+body {
+  font-family: 'Caveat', cursive;
+  font-size: 14px;
+}
+.font-caveat {
   font-family: 'Caveat', cursive;
 }
-#font-PermanentMarker {
+.font-PermanentMarker {
   font-family: 'Permanent Marker', cursive;
+}
+a,
+table,
+form .input-field>label,
+form label  {
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+}
+.material-icons {
+  font-family: 'Material Icons' !important;
+}
+.font24 {
+  font-size: 24px;
+}
+.font20 {
+  font-size: 20px;
+}
+.font18 {
+  font-size: 18px;
+}
+.roboto {
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
 }
 
 /* Responsive */
@@ -431,6 +480,12 @@ body {
 .hero nav ul a:last-child{
   margin-right: 0;
 }
+.hero nav ul li.active a {
+  color: #26a69a;
+}
+.hero nav ul li.active {
+  background-color: transparent;
+}
 /* 3.1.2 Food Search*/
 .form-search {
   padding-top: 10px;
@@ -442,6 +497,9 @@ body {
 .form-search  .btn-search {
   border-radius: 0 20px 20px 0;
   height: 36px;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border: 1px solid #ff9800;
 }
 
 /* 3.2 Food list */
